[tool.poetry]
name = "jrnlmd"
version = "0.1.0"
description = "A script to write a journal in markdown format."
authors = ["Simone Gaiarin <simgunz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
