[tool.poetry]
name = "jrnlmd"
version = "0.1.0"
description = "A script to write a journal in markdown format."
authors = ["Simone Gaiarin <simgunz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
types-dateparser = "^1.0.8"
black = "^21.12b0"
mypy = "^0.920"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
