[tool.poetry]
name = "jrnlmd"
version = "0.4.0"
description = "A script to write a journal in markdown format."
authors = ["Simone Gaiarin <simgunz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.1.0"
click = "^8.0.4"
appdirs = "^1.4.4"
click-config-file = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.920"
pre-commit = "^2.16.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jrnlmd = 'jrnlmd.jrnlmd:cli'

[[tool.mypy.overrides]]
module = [
    "dateparser",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
